[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
near-workspaces = "0.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
near-sdk = "5.1"
xchain-core = { path = "../contracts/xchain-core" }

[[test]]
name = "integration"
path = "src/lib.rs"
